--- a/widgets/biginnew/SMSMagicForBigin/app/settings.html
+++ b/widgets/biginnew/SMSMagicForBigin/app/settings.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js" crossorigin="anonymous"></script>
-  <script src="js/ZohoEmbededAppSDK.min.js"></script>
+  <script src="js/lib/ZohoEmbededAppSDK.min.js"></script>
   <script src="js/custom.js"></script>
 </head>
 
