--- a/widgets/YAMessenger/app/widget.html
+++ b/widgets/YAMessenger/app/widget.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/4.0.0/css/jasny-bootstrap.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/sendsms.css" rel="stylesheet">
-  
+
   <script src="//code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="//stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="//cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
@@ -30,7 +30,7 @@
       aria-valuenow="2" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
   <form id="message-form" class=".container-fluid">
-    <div class="row justify-content-end"></div><div class="col-12"><i id="settings" class="material-icons">settings</i></div></div>
+    <div class="row m-0"><div class="col-12 text-right"><i id="settings" class="material-icons">settings</i></div></div>
     <div class="card border-bottom-0 border-top-0 rounded-0">
       <div class="card-body">
         <div class="form-row">
@@ -56,7 +56,7 @@
             </select>
           </label>
           <label class="col-6 ya-color" for="record-fields">
-            Merge fields:
+            Merge Fields:
             <select style="width: 100%" class="rounded-0" id="record-fields" name="MergeFiels[]"
               multiple="multiple"></select>
           </label>
@@ -65,8 +65,8 @@
         <div class="form-row">
           <div class="col-12">
             <textarea class="form-control bg-light rounded-0" id="message-text" placeholder="Type you message here"
-              rows="8" name="TextMessage" required></textarea>
-            <div class="float-right">  
+              rows="6" name="TextMessage" required></textarea>
+            <div class="float-right">
               <div id="text-active" class="spinner-grow text-primary spinner-grow-sm invisible" role="status">
                 <span class="sr-only">Loading...</span>
               </div>
@@ -95,7 +95,7 @@
                 </span>
             </div>
           </div>
-        </div><br>        
+        </div><br>
         <div class="form-row">
           <div class="col-7">
               <div id="form-error-alert" class="alert alert-danger alert-dismissible fade show rounded-0" style="padding: 0.37em 1.25em;" role="alert">
@@ -117,7 +117,21 @@
   <div id="value-cache" class="invisible" style="display: none;"></div>
   <div id="org-var-modal" style="height: 0px;"></div>
   <div id="preview-modal" style="height: 0px;"></div>
-  <div class="modal_spinner"></div>
+  <div class="modal_spinner">
+      <div class="spinner-grow text-primary" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+      <div class="spinner-grow text-success" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+      <div class="spinner-grow text-danger" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+      <div class="spinner-grow text-warning" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+  </div>
   <script>
     $(function(){
       $("#org-var-modal").load("html/dialogs.html #org-var-modal-src", function(response, status, xhr){
