--- a/widgets/biginnew/SMSMagicForBigin/app/settings.html
+++ b/widgets/biginnew/SMSMagicForBigin/app/settings.html
@@ -14,26 +14,73 @@
   <script src="js/custom.js"></script>
 </head>
 <body>
-  <div class="container mt-5">
-    <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-      <div class="card-header">Header</div>
-      <div class="card-body">
-        <h5 class="card-title">Record Info (If any)</h5>
-        <p id="recordInfo" class="card-text">Records</p>
+  <div class="container">
+    <div aria-live="polite" aria-atomic="true" class="position-relative">
+        <div class="toast-container position-absolute top-0 end-0 p-3 pt-5">
+          <div id="magictoast" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+              <div class="toast-body">
+                <strong>Hurray!</strong> You have selected <span id="selected-dc"></span>
+              </div>
+              <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div aria-live="polite" aria-atomic="true" class="position-relative">
+      <div class="toast-container position-absolute top-0 end-0 p-3 pt-5">
+        <div id="magicinputtoast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header">
+            <svg class="bd-placeholder-img rounded me-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#007aff"></rect></svg>
+            <strong class="me-auto">Set custom data center</strong>
+          </div>
+          <div class="toast-body bg-white">
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="inputGroup-sizing-default"><i class="material-icons">&#xe157;</i></span>
+              <input id="otherdcinputurl" type="text" class="form-control" aria-label="Custom DC URL" aria-describedby="inputGroup-sizing-default">
+              <button id="otherdcsavebtn" type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="toast">Save</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-      <div class="card-header">Header</div>
+    <div class="card">
+      <div class="card-header">
+        SMS Magic Data Center
+      </div>
       <div class="card-body">
-        <h5 class="card-title">User Info (If any)</h5>
-        <p id="userInfo" class="card-text">Users</p>
+        <p class="card-text">SMS Magic has 3 data centers: <strong>US</strong>, <strong>Europe</strong> and <strong>Australia</strong>.
+          We provide multi Data centers to meet the compliances such as GDPR.
+          Please select the data center to which you account with SMS Magic belong.
+          The SMS Magic Topping will use corresponding data center to route your messages.
+        </p>
+        <div class="input-group mb-3">
+          <span class="input-group-text"><i class="material-icons">&#xeb92;</i></span>
+          <input id="inputdcurl" type="text" class="form-control" disabled="true" placeholder="Data Center URL" aria-label="DataCenterURL" aria-describedby="basic-addon1">
+          <button id="dcseleter" class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li onclick="javascript:selectDataCenter(1);"><button id="usdc" class="dropdown-item">US Data Center</a></li>
+            <li onclick="javascript:selectDataCenter(2);"><button id="eudc" class="dropdown-item">EU Data Center</a></li>
+            <li onclick="javascript:selectDataCenter(3);"><button id="audc" class="dropdown-item">AU Data Cente</a></li>
+            <li onclick="javascript:selectDataCenter(4);"><button id="otherdc" class="dropdown-item">Others...</a></li>
+          </ul>
+        </div>
       </div>
     </div>
-    <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-      <div class="card-header">Header</div>
+
+    <div class="card mt-3">
+      <div class="card-header">
+        Default Phone Field
+      </div>
       <div class="card-body">
-        <h5 class="card-title">Organization Info</h5>
-        <p id="orgInfo" class="card-text">Organizations</p>
+        <p class="card-text">Please seletc the <strong>default phone field</strong>. This will be used by SMS Magic to
+        send messages. The field belogs to the Contacts module.</p>
+        <div class="input-group mb-3">
+          <span class="input-group-text"><i class="material-icons">&#xe325;</i></span>
+          <input id="inputPhoneField" type="text" class="form-control" disabled="true" placeholder="Default Phone Field" aria-label="DataCenterURL" aria-describedby="basic-addon1">
+          <button id="phoneFieldseleter" class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+          <ul id="phone-fields" class="dropdown-menu dropdown-menu-end"></ul>
+        </div>
       </div>
     </div>
   </div>
