--- a/widgets/biginnew/SMSMagicForBigin/app/html/dialogs.html
+++ b/widgets/biginnew/SMSMagicForBigin/app/html/dialogs.html
@@ -6,28 +6,8 @@
         <div id="magictoast" class="toast align-items-center text-white bg-primary border-0" role="alert"
             aria-live="assertive" aria-atomic="true">
             <div class="d-flex">
-                <div class="toast-body">
-                    You have selected <span id="selected-dc"></span>
-                </div>
+                <div class="toast-body"><span id="toast-text">Settings have been saved</span></div>
                 <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-            </div>
-        </div>
-    </div>
-
-    <div id="magic-toast-input-src" class="toast-container position-absolute top-0 end-0 p-3 pt-5">
-        <div id="magicinputtoast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-                <svg class="bd-placeholder-img rounded me-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <rect width="100%" height="100%" fill="#007aff"></rect>
-                </svg>
-                <strong class="me-auto">Set custom data center</strong>
-            </div>
-            <div class="toast-body bg-white">
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="inputGroup-sizing-default"><iclass="material-icons">&#xe157;</i></span>
-                    <input id="otherdcinputurl" type="text" class="form-control" aria-label="Custom DC URL" aria-describedby="inputGroup-sizing-default">
-                    <button id="otherdcsavebtn" type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="toast">Save</button>
-                </div>
             </div>
         </div>
     </div>
